--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="public/main.css" />
-  <script src="public/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="examples/public/main.css" />
+  <script src="examples/public/main.js"></script>
 </head>
 <body>
   <div class="bor">
   <table bgcolor=#f0f0f0 cellspacing=0 class="hh">
     <tr>
-      <td><img src="public/images/llama.png" align="left"></td>
+      <td><img src="examples/public/images/llama.png" align="left"></td>
     <td>
     <table cellspacing=0>
       <tr><td><b>pyros2097</b></td></tr>
